--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<p class="ticket_text">Вы получили билет на<br>полёт вместе с нами</p>
 				<p class="ticket_text">Ведт случится самое главное<br>событие года - мы женимся!</p>
 				<div class="ticket_block_taimer">
-					<img src="./pictures/png/_2.png" alt="" class="ticket_img">
+					<img src="https://webbernut.github.io/Andryu/pictures/_2.png" alt="" class="ticket_img">
 					<div class="ticket_taimer">
 						<div class="timer">
 							<div class="timer__items">
@@ -37,7 +37,7 @@
 							  <div class="timer__item timer__minutes">00</div>
 							  <div class="timer__item timer__seconds">00</div>
 							</div>
-						  </div>
+						</div>
 					</div>
 				</div>
 			</div>
