--- a/index.html
+++ b/index.html
@@ -8,14 +8,10 @@
 	<script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script defer src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/js/bootstrap.min.js" integrity="sha512-UR25UO94eTnCVwjbXozyeVd6ZqpaAE9naiEUBK/A+QDbfSTQFhPGj5lOR6d8tsgbBk84Ggb5A3EkjsOgPRPcKA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<link rel="stylesheet" href="css/wrapper.css">
-	<link rel="stylesheet" href="css/header.css">
-	<link rel="stylesheet" href="css/content.css">
-	<link rel="stylesheet" href="css/footer.css">
+	<link rel="stylesheet" href="css/index_screen.css">
 	
 </head>
 <body>
-	<div class="container">
 		<header>
 			<div class="header_block">
 				<img src="./pictures/png/photo.png" alt="" class="header_block_img">
@@ -28,7 +24,7 @@
 				<p class="ticket_text">Вы получили билет на<br>полёт вместе с нами</p>
 				<p class="ticket_text">Ведт случится самое главное<br>событие года - мы женимся!</p>
 				<div class="ticket_block_taimer">
-					<img src="https://webbernut.github.io/Andryu/pictures/_2.png" alt="" class="ticket_img">
+					<img src="./pictures/png/_2.png" alt="" class="ticket_img">
 					<div class="ticket_taimer">
 						<div class="timer">
 							<div class="timer__items">
@@ -37,7 +33,7 @@
 							  <div class="timer__item timer__minutes">00</div>
 							  <div class="timer__item timer__seconds">00</div>
 							</div>
-						</div>
+						  </div>
 					</div>
 				</div>
 			</div>
@@ -71,7 +67,6 @@
 				<p class="contact_title">С любовью <br> Эндрю и Катя!</p>
 			</div>
 		</content>
-	</div>
 	<script>
 		document.addEventListener('DOMContentLoaded', function () {
 		  // конечная дата
